[gd_scene load_steps=11 format=3 uid="uid://b7ujvs88d62bt"]

[ext_resource type="Script" path="res://scripts/card.gd" id="1_jm52i"]
[ext_resource type="Shader" path="res://shaders/card.gdshader" id="1_l0lhk"]
[ext_resource type="Texture2D" uid="uid://dgafvnfa5ia26" path="res://assets/ui/deck/deck_2.png" id="2_vhocf"]
[ext_resource type="Texture2D" uid="uid://carkk4t7qdagx" path="res://assets/landscapes/index2.jpg" id="3_n2ol5"]
[ext_resource type="Script" path="res://scripts/card_back.gd" id="4_8cvqy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kx8j4"]
shader = ExtResource("1_l0lhk")
shader_parameter/shine_color = Color(1, 1, 1, 1)
shader_parameter/shine_progress = 0.94
shader_parameter/shine_size = 0.05
shader_parameter/shine_angle = 45.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_te8u3"]

[sub_resource type="Animation" id="Animation_oc23s"]
resource_name = "card_flip"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Back:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.1, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Back/Face:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [-1, 0]
}

[sub_resource type="Animation" id="Animation_jmsco"]
resource_name = "card_hide"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Back:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.1, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Back/Face:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, -1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4fqqq"]
_data = {
"card_flip": SubResource("Animation_oc23s"),
"card_hide": SubResource("Animation_jmsco")
}

[node name="Card" type="Control"]
custom_minimum_size = Vector2(113, 108)
layout_direction = 2
layout_mode = 3
anchor_right = 0.196181
anchor_bottom = 0.105469
offset_right = -9.0
offset_bottom = -8.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_jm52i")
metadata/_edit_use_anchors_ = true

[node name="Back" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_kx8j4")
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
pivot_offset = Vector2(56.5, 54)
texture = ExtResource("2_vhocf")
expand_mode = 1
script = ExtResource("4_8cvqy")
metadata/_edit_use_anchors_ = true

[node name="Face" type="Sprite2D" parent="Back"]
z_index = -1
position = Vector2(56.5, 54)
scale = Vector2(1.012, 1)
texture = ExtResource("3_n2ol5")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_te8u3")
flat = true
metadata/_edit_use_anchors_ = true

[node name="Flip" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4fqqq")
}

[connection signal="pressed" from="Button" to="." method="_on_touch_screen_button_pressed"]
[connection signal="animation_finished" from="Flip" to="." method="_on_flip_animation_finished"]
[connection signal="animation_started" from="Flip" to="." method="_on_flip_animation_started"]
